--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -52,8 +52,8 @@
         <TextView
 
             android:id="@+id/timer"
-            android:layout_width="63dp"
-            android:layout_height="36dp"
+            android:layout_width="99dp"
+            android:layout_height="44dp"
             android:layout_alignParentRight="true"
             android:textSize="@dimen/_20sdp"
             android:visibility="visible" />
@@ -65,6 +65,7 @@
                 android:orientation="vertical"
                 >
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_120sdp"
@@ -72,20 +73,24 @@
 
             >
 
-                <androidx.core.widget.NestedScrollView
-                    android:layout_width="wrap_content"
+
+
+            <HorizontalScrollView
+                android:layout_width="@dimen/_300sdp"
                     android:layout_height="@dimen/_120sdp">
 
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="@dimen/_300sdp"
+                    android:layout_height="@dimen/_120sdp">a
 
-
-                        <io.github.kexanie.library.MathView
+                <io.github.kexanie.library.MathView
                             android:id="@+id/KaTeX_Ques"
-                            android:layout_width="wrap_content"
+                            android:layout_width="@dimen/_400sdp"
                             android:layout_height="wrap_content"
                             auto:engine="MathJax">
                         </io.github.kexanie.library.MathView>
-
-                </androidx.core.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
+                </HorizontalScrollView>
 
         </LinearLayout>
 
