--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -18,15 +18,38 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/nav_header_name"
+                android:layout_width="0dp"
+                android:layout_height="72dp"
+                android:layout_margin="0dp"
+                android:layout_weight="1"
+                android:background="#4C21AE"
+                android:drawableLeft="@drawable/unit"
+                android:foreground="?attr/selectableItemBackground"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:text="    MMIT-MHCET"
+                android:textAlignment="textStart"
+                android:textAllCaps="true"
+                android:textColor="#FFFF"
+                android:textSize="24sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
                 android:id="@+id/unit"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_margin="2dp"
+                android:layout_height="99dp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
                 android:background="#f0eb79"
+                android:drawableRight="@drawable/unit"
                 android:foreground="?attr/selectableItemBackground"
-                android:drawableTop="@drawable/unit"
-                android:paddingTop="25dp"
+                android:paddingRight="@dimen/_20sdp"
                 android:text="Unit Test"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
@@ -44,13 +67,14 @@
             <Button
                 android:id="@+id/series"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_margin="2dp"
+                android:layout_height="99dp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
                 android:background="#524d47"
                 android:foreground="?attr/selectableItemBackground"
-                android:drawableTop="@drawable/test"
-                android:paddingTop="25dp"
+                android:drawableRight="@drawable/test"
+                android:paddingRight="@dimen/_20sdp"
                 android:text="Test Series"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
@@ -67,12 +91,13 @@
             <Button
                 android:id="@+id/papers"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_margin="2dp"
+                android:layout_height="99dp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
                 android:background="#a084d1"
-                android:drawableTop="@drawable/copy"
-                android:paddingTop="25dp"
+                android:drawableRight="@drawable/copy"
+                android:paddingRight="@dimen/_20sdp"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="Question Papers"
                 android:textAllCaps="false"
@@ -90,13 +115,14 @@
             <Button
                 android:id="@+id/bookmark"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_margin="2dp"
+                android:layout_height="99dp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
                 android:background="#80e7a9"
-                android:drawableTop="@drawable/bookmark"
+                android:drawableRight="@drawable/bookmark"
                 android:foreground="?attr/selectableItemBackground"
-                android:paddingTop="25dp"
+                android:paddingRight="@dimen/_20sdp"
                 android:text="BookMarks"
                 android:textAllCaps="false"
                 android:textColor="#fff"
@@ -110,13 +136,14 @@
             <Button
                 android:id="@+id/graph"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_margin="2dp"
+                android:layout_height="99dp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:foreground="?attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:background="#f5f5dc"
-                android:drawableTop="@drawable/chart"
-                android:paddingTop="40dp"
+                android:drawableRight="@drawable/chart"
+                android:paddingRight="@dimen/_20sdp"
                 android:text="Performance Graph"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
